<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.dapay.app.ProfileSettingsActivity"
    android:background="#ddf">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/pref_button_ok">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/prompt_preferences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/textView10"
                android:textSize="24sp" />

            <TextView
                android:text="@string/prompt_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:id="@+id/textView11"
                android:textSize="18sp"
                android:layout_below="@+id/textView10"
                android:layout_alignParentStart="true" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView11"
                android:id="@+id/pref_radio_group" >

                <RadioButton
                    android:text="@string/action_presell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView11"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="13dp"
                    android:id="@+id/pref_radio_action_presell" />

                <RadioButton
                    android:text="@string/action_take"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pref_radio_action_presell"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:id="@+id/pref_radio_action_take"
                    android:layout_marginTop="12dp" />

                <RadioButton
                    android:text="@string/action_make"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pref_radio_action_take"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:id="@+id/pref_radio_action_make"
                    android:layout_marginTop="12dp" />

                <RadioButton
                    android:text="@string/action_hold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pref_radio_action_make"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:id="@+id/pref_radio_action_hold"
                    android:layout_marginTop="12dp" />
            </RadioGroup>

        </RelativeLayout>
    </ScrollView>

    <Button
        android:text="@android:string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pref_button_ok"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
