<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile_pin_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.dapay.app.ProfilePinLoginActivity"
    android:background="#ddf">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/pin_login_progress"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pin_login_wait_pb"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:layout_centerInParent="true" />

        <TextView
            android:text="@string/wait_logging_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pin_login_wait_msg"
            android:layout_above="@+id/pin_login_wait_pb"
            android:layout_centerHorizontal="true"
            android:textSize="18sp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/pin_login_scroll_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/pin_login_linear_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pin_login_label"
                android:textSize="24sp"
                android:text="dummy" />

            <TextView
                android:text="@string/market"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textSize="18sp"
                android:layout_marginTop="16dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/list_border"
                android:id="@+id/pin_login_row_layout">

                <include
                    android:id="@+id/pin_login_broker_desc"
                    layout="@layout/layout_row_broker" />
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <EditText
                    android:id="@+id/pin_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:background="@drawable/textlines"
                    android:padding="8dp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:text="@string/prompt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pin_login_button"
                android:layout_marginTop="16dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
